# a2adk-template

./: .dockerignore  README.ADK.kr.md  README.ADK.md  README.kr.md  README.md  dockerfile  env-sample  pyproject.toml
a2adk/: __init__.py  __main__.py  a2atool.py  adk_agent_executor.py  utils.py
a2adk/agents/: __init__.py  agent.py  card.py
a2adk/routes/: __init__.py  bucket.py  session.py
frontend/: .dockerignore  dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/client/: client.ts  error.ts  helpers.ts  schema.ts
frontend/src/components/: session-list.tsx
